grammar and concision edits, up to figure 5 analysis

--- a/proposal code.ipynb
+++ b/proposal code.ipynb
@@ -156,7 +156,7 @@
    "id": "4446a1c8-968a-4cd2-8849-e16a2329e7aa",
    "metadata": {},
    "source": [
-    "**Load Data**: A zip file was loaded from the original web source (https). Then, we created a temporary file path to store the *temp* variable, to temporarily store the downloaded zip file before it is extracted. Next, we used 'download.file' to download the zip file and saved it in 'temp'. The unzip() function extracts the xlsx file from the downloaded zip file and saves it in the 'beanzip' filepath. Finally, the read_excel file reads the xlsx file and we named the data frame 'bean'. \n"
+    "**Loading Data**: A zip file was loaded from the original web source (https). Then, we created a temporary file path to store the *temp* variable, to temporarily store the downloaded zip file before it is extracted. Next, we used 'download.file' to download the zip file and saved it in 'temp'. The unzip() function extracts the xlsx file from the downloaded zip file and saves it in the 'beanzip' filepath. Finally, the read_excel file reads the xlsx file and we named the data frame 'bean'. \n"
    ]
   },
   {
@@ -189,7 +189,7 @@
    "id": "b61ee2bd",
    "metadata": {},
    "source": [
-    "**Select variables & data wrangling & cleaning**: After exploring the data and doing research, we will select two variables for prediction: roundness and area. These two variables are connected to our research question. Also, these two variables produce distinct clusters by bean type, which is helpful in classifying the datapoints (as seen later on in *Figure 1*, and *Figure 0*).\n",
+    "**Selecting variables & data wrangling & cleaning**: After exploring the data and doing research, we will select two variables for prediction: roundness and area. These two variables are connected to our research question. Also, these two variables produce distinct clusters by bean type, which is helpful in classifying the datapoints (as seen later on in *Figure 1*, and *Figure 0*).\n",
     "We will select the relevant columns, 'Area', 'roundness', and 'Class from *Table 1* to create another table. "
    ]
   },
@@ -476,9 +476,9 @@
    "id": "bbdcc8b2",
    "metadata": {},
    "source": [
-    "**Upsampling**: By looking at the *Table 4* and *Figure 4* viewing the total number of datapoints for each type of beans, we can see that there are a big difference in number of datapoints between Dermason bean type with other type of beans. Therefore, we will upsample the training dataset so that each Class of bean has a voting power when it comes to the classfication of the testing dataset. This is done in the 'recipe' and 'step_upsample ()' functions. \n",
+    "**Upsampling**: By looking at the *Table 4* and *Figure 4* viewing the total number of datapoints for each type of beans, we can see that there's a big difference in the number of datapoints between Dermason bean type compared to other type of beans. Therefore, we will upsample the training dataset so that each Class of bean has a comparable voting power when it comes to the classfication of the testing dataset. This is done in the 'recipe' and 'step_upsample ()' functions. \n",
     "\n",
-    "**Scaling:** all data is called to avoid features with large values dominating the decision process. The Scaling of the data later be part of the Classifier building process called `workflow()`.\n",
+    "**Scaling:** all data is called to avoid features with large values dominating the decision process. The scaling of the data will later be part of the Classifier building process called `workflow()`.\n",
     "\n",
     "Next, we plot the data agin to see what the upsampled data set looks like. We can see that each cluster should have approximately equal data points. "
    ]
@@ -514,7 +514,7 @@
    "id": "48e17637",
    "metadata": {},
    "source": [
-    "**Summary of the data set**: Next we will look at Statistical distribution of our chosen variables, in table and boxplot form. To understand the distribution, we calculated the basic statistics such as range and standard deviation. To do this, we group the beans by their types (Class), and create a new dataframe that includes the statistics in each column. \n"
+    "**Summary of the data set**: Next we will look at Statistical distribution of our chosen variables, in table and boxplot form. To understand the distribution, we calculate the basic statistics such as range and standard deviation. To do this, we group the beans by their types (Class), and created a new dataframe that includes the statistics in each column. \n"
    ]
   },
   {
@@ -600,7 +600,7 @@
    "id": "23e5633e-86e2-4705-a92e-5de02de90890",
    "metadata": {},
    "source": [
-    "By looking at *Figure 5*, we can find that the square box which represent 50% of each bean type has little overlap over each other (Krzywinski et al., 2014) . we can also find that 5/6 bean type (Sira, Seker, Horoz, Cali, and Bombay) has outliers that is higher than most of its usual area size, base on the dots above the upper whiskers (Krzywinski et al., 2014). We might expect that these outliers might also affect the accuracy of the classifier as these outliers starts overlapping over other bean types area measurements. However, out of all the bean type Bombay seems to have its distribution in area distinguished over other bean type, so we might see that the classifier can predict the Bombay bean type better than other type. While Sira and Seker area distribution seems to over over each other so we also expect that this can affect classifier accuracy.\n",
+    "By looking at *Figure 5*, we can find that the square box which represents 50% of each bean type has little overlap over each other (Krzywinski et al., 2014) . we can also find that 5/6 bean types (Sira, Seker, Horoz, Cali, and Bombay) have outliers that are higher in value than most of its usual area size, based on the data points above the upper whiskers (Krzywinski et al., 2014). We might expect that these outliers might also affect the accuracy of the classifier as these outliers overlap other bean types area measurements. However, out of all the bean types, Bombay seems to have the most distinct area distribution, so we might see that the classifier can predict the Bombay bean type better than other types of beans. Sira and Seker area distributions are seen overlapping each other, so we also expect this to affect classifier accuracy.\n",
     "\n",
     "Then, we graph the box plot showing roundness distribution for each type of box plot. "
    ]
@@ -612,7 +612,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "roundness_box_plot <- final_bean_data |>\n",
     "                ggplot(aes(x = Class, y = roundness))+\n",
     "                geom_boxplot()+\n",
