--- a/proposal code.ipynb
+++ b/proposal code.ipynb
@@ -189,8 +189,11 @@
    "id": "b61ee2bd",
    "metadata": {},
    "source": [
-    "**Selecting variables & data wrangling & cleaning**: After exploring the data and doing research, we will select two variables for prediction: roundness and area. These two variables are connected to our research question. Also, these two variables produce distinct clusters by bean type, which is helpful in classifying the datapoints (as seen later on in *Figure 1*, and *Figure 0*).\n",
-    "We will select the relevant columns, 'Area', 'roundness', and 'Class from *Table 1* to create another table. "
+    "**Selecting variables & data wrangling & cleaning**: We will explore the data and and select the variables for prediction. The variables should produce distinct clusters by bean type, which is helpful in classifying the datapoints. \n",
+    "\n",
+    "To do so, we create a scatterplot matrix to further explore the relationship between all variables, and have the colors based on the \"Class\" variable. To do so, we use the \"ggpairs\" function. The \"columns\" argument includes all the variables we included in the matrix, and the \"lower\" argument specifies the type of plot. In this graph, we chose a \"continuous\" scatterplot and \"combo\" to display off-diagonal plots are dot plots without facets that is easier to visualize. \n",
+    "\n",
+    "We then use plot_grid()"
    ]
   },
   {
@@ -254,17 +257,31 @@
    "id": "c33bdf0a-d21a-4e35-93af-0fc0a65b09fc",
    "metadata": {},
    "source": [
-    "In order to determine the best set of data for analysis, we looked at the two groups that best represented the similarities between the bean classes as well as having the better cluster groups compared to the other variables. One of the few figures that responded to this is Area vs roundness."
+    "The \"ggpairs\" function helps us to better visualize the relationship between variables and their class. It can help us to identify any correlations, outliers, and class separation (see *Figure 0*). \n",
+    "\n",
+    "In order to determine the best set of data for analysis, we looked at the two groups that best represented the similarities between the bean classes as well as having the better cluster groups compared to the other variables. According to *Figure 0*, we will select the variables Area and Roundness. \n",
+    "\n",
+    "Then, we create a table only with the variables we're interested in: Area, roundness, and Class. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "331ce777",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ERROR",
+     "evalue": "Error in select(bean, \"Area\", \"roundness\", \"Class\"): object 'bean' not found\n",
+     "output_type": "error",
+     "traceback": [
+      "Error in select(bean, \"Area\", \"roundness\", \"Class\"): object 'bean' not found\nTraceback:\n",
+      "1. select(bean, \"Area\", \"roundness\", \"Class\")"
+     ]
+    }
+   ],
    "source": [
     "select_bean_var <- bean |>\n",
     "                select(\"Area\",\"roundness\",\"Class\")\n",
