made edits to figure analysis

--- a/proposal code.ipynb
+++ b/proposal code.ipynb
@@ -617,7 +617,7 @@
    "id": "23e5633e-86e2-4705-a92e-5de02de90890",
    "metadata": {},
    "source": [
-    "By looking at *Figure 5*, we can find that the square box which represents 50% of each bean type has little overlap over each other (Krzywinski et al., 2014) . we can also find that 5/6 bean types (Sira, Seker, Horoz, Cali, and Bombay) have outliers that are higher in value than most of its usual area size, based on the data points above the upper whiskers (Krzywinski et al., 2014). We might expect that these outliers might also affect the accuracy of the classifier as these outliers overlap other bean types area measurements. However, out of all the bean types, Bombay seems to have the most distinct area distribution, so we might see that the classifier can predict the Bombay bean type better than other types of beans. Sira and Seker area distributions are seen overlapping each other, so we also expect this to affect classifier accuracy.\n",
+    "By looking at *Figure 5*, we can find that the square boxes, which represents the middle 50% of each bean type, have little overlap over each other (Krzywinski et al., 2014) . We can also find that 5/6 bean types (Sira, Seker, Horoz, Cali, and Bombay) have outliers that are higher in value than most of its usual area size, based on the data points above the upper whiskers (Krzywinski et al., 2014). We might expect that these outliers might also affect the accuracy of the classifier as these outliers overlap other bean types area measurements. However, out of all the bean types, Bombay seems to have the most distinct area distribution, so we might see that the classifier can predict the Bombay bean type better than other types of beans. Sira and Seker area distributions are seen overlapping each other, so we also expect this to affect classifier accuracy.\n",
     "\n",
     "Then, we graph the box plot showing roundness distribution for each type of box plot. "
    ]
@@ -644,7 +644,7 @@
    "id": "9d3deea9-7925-42cd-b130-cd0810e0df44",
    "metadata": {},
    "source": [
-    "In *Figure 7*, we can see that most of the bean type 50% of roundness distribution does not overlap each other. However there are a lot of outliers that cause these bean type roundness distribution to overlap each other. The overlap of roundness distribution of dataset matches the distribution of bean type of Area and Roundness that we see in Figure 1, 2, 3, 5. However, due to 50% of the dataset mostly don't overlap each other as we seen in *Figure 7*, we can also see distinct cluster in Figure 1, 2, 3, and 5."
+    "In *Figure 7*, we can see that most of the bean types' middle 50% of roundness distribution do not overlap each other. However, there are a lot of outliers that cause these bean type roundness distribution to overlap each other. The overlap of roundness distribution of dataset matches the distribution of bean type of Area and Roundness that we see in Figure 1, 2, 3, 5. However, due to 50% of the dataset mostly don't overlap each other as we seen in *Figure 7*, we can also see distinct cluster in Figure 1, 2, 3, and 5."
    ]
   },
   {
