made edits to figure analysis

--- a/proposal code.ipynb
+++ b/proposal code.ipynb
@@ -644,7 +644,7 @@
    "id": "9d3deea9-7925-42cd-b130-cd0810e0df44",
    "metadata": {},
    "source": [
-    "In *Figure 7*, we can see that most of the bean types' middle 50% of roundness distribution do not overlap each other. However, there are a lot of outliers that cause these bean type roundness distribution to overlap each other. The overlap of roundness distribution of dataset matches the distribution of bean type of Area and Roundness that we see in Figure 1, 2, 3, 5. However, due to 50% of the dataset mostly don't overlap each other as we seen in *Figure 7*, we can also see distinct cluster in Figure 1, 2, 3, and 5."
+    "In *Figure 7*, we can see that most of the bean types' middle 50% of roundness distribution do not overlap each other. However, there are a lot of outliers that cause these bean type roundness distribution to overlap each other overall. The overlap of roundness distribution of dataset matches the distribution of bean type of Area and Roundness that we see in Figure 1, 2, 3, and 5. Due to the middle 50% of the dataset distribution having mostly no overlap with each other as seen in *Figure 7*, we can also see distinct clusters in Figure 1, 2, 3, and 5."
    ]
   },
   {
