small grammatical edits

--- a/proposal code.ipynb
+++ b/proposal code.ipynb
@@ -660,7 +660,7 @@
    "id": "e289d843-d2d9-4309-853d-777aabb6660c",
    "metadata": {},
    "source": [
-    "Now we should start building the classifier. However, before starting to build the classifier, we need to create the scaling and centering recipe on the training dataset, to ensure that all predictors are standardized, so that predictor with larger scales won't create a greater unwanted affect. We set the seed to 2022 so the codes can be reproducible, and it produces consistent results. "
+    "Now we should start building the classifier. However, before starting to build the classifier, we need to create the scaling and centering recipe on the training dataset to ensure that all predictors are standardized, so that predictor with larger scales won't create a greater unwanted effect. We set the seed to 2022 so the codes can be reproducible, and it produces consistent results. "
    ]
   },
   {
@@ -683,7 +683,7 @@
    "id": "b50e9394-403f-406e-a3a7-791df2f7daa7",
    "metadata": {},
    "source": [
-    "Next, we need to tune our model using the cross-validation method, so that we can choose the optimal K-neighbour. First we need to specify the model for cross-validation, where the neighbour = tune() is used to test accuracies of model across different range of k-neighbours. Cross-validation is a method to help us tune our classifier. Cross-validation will randomly divide the training sets into specified number of smaller set with the same size. The method then will train our classifier using the remaining sets that were not accept as one test set. This process is repeated until all of the set that was divided has a chance to be a test set (Arlot and Celisse, 2010). Here, we use cross-validation across a range of number of neighbours and get the number with the best accuracy estimate."
+    "Next, we need to tune our model using the cross-validation method, so that we can choose the optimal K-neighbour. First, we need to specify the model for cross-validation, where the neighbour = tune() is used to test accuracies of model across different range of k-neighbours. Cross-validation is a method to help us tune our classifier. Cross-validation will randomly divide the training sets into specified number of smaller set with the same size. The method then will train our classifier using the remaining sets that were not accept as one test set. This process is repeated until all of the set that was divided has a chance to be a test set (Arlot and Celisse, 2010). Here, we use cross-validation across a range of number of neighbours and get the number with the best accuracy estimate."
    ]
   },
   {
@@ -705,7 +705,7 @@
    "id": "05f57501-cb1e-4774-9fa7-587685a56a20",
    "metadata": {},
    "source": [
-    "Now we use the `vfold_cv()` to split the training data into 10 fold for cross-validation. `gridvals` is where we set the range of k-neighbours that we would like to cross-validate with. Since we have run the this code a few time to get the best estimate of a range of k-neighbours to use, we decide only run upto 30 k-neighbours to get the best k-neighbours for our classifier."
+    "Now we use the `vfold_cv()` to split the training data into 10 fold for cross-validation. `gridvals` is where we set the range of k-neighbours that we would like to cross-validate with. Since we have run this code a few times to get the best estimate of a range of k-neighbours to use, we decide only run up to 30 k-neighbours to get the best k-neighbours for our classifier."
    ]
   },
   {
@@ -727,7 +727,7 @@
    "id": "052aba22-7ced-4ca9-9150-7f5518a1ce88",
    "metadata": {},
    "source": [
-    "Now we start to cross-validate multiple k-neighbours to the training dataset. The function `tune_grid()` here allow us to fit the model for each value in a range of value. After the cross-validation is run, we collect the accuracies calculated from each value of k-neighbours."
+    "Now we start to cross-validate multiple k-neighbours to the training dataset. The function `tune_grid()` allows us to fit the model for each value in a range of values. After the cross-validation is run, we collect the accuracies calculated from each value of k-neighbours."
    ]
   },
   {
