minor edits to grammar overall

--- a/proposal code.ipynb
+++ b/proposal code.ipynb
@@ -780,8 +780,8 @@
    "id": "3fab009f-c456-4b35-9290-7f34299f52cc",
    "metadata": {},
    "source": [
-    "From *Figure 9*, we can see that with such a large dataset like the bean dataset, large number of neighbour is required to predict the data accurately. \n",
-    "From the graph we can see that the highest accuracies is around 17-19 neighbours. We can also see that around 18 neighbors is a good K, since the accuracy does not fluctuate much between 17-19 neighbours "
+    "From *Figure 9*, we can see that with a large dataset like the bean dataset, a large number of neighbours is required to predict the data accurately. \n",
+    "From the graph, we can observe that the highest accuracies is around 17-19 neighbours. We also note that 18 neighbors is a good K, since the accuracy does not fluctuate much between 17-19 neighbours "
    ]
   },
   {
@@ -789,7 +789,7 @@
    "id": "a69ccb0b-07a1-4afb-9733-10f45fad0a9a",
    "metadata": {},
    "source": [
-    "Now that we have a good estimate of which neighbours yield the highest accuracy for our classification, we should build our classifier with that k-neighbour, in our case is: 18 neighbour. We first build the specification of the classifier using the best neighbour. Then we build the workflow with the best spec, and we can use the recipe that we created before. "
+    "Now that we have a good estimate of which neighbours yield the highest accuracy for our classification, we should build our classifier with that k-neighbour. In our case, this will be K = 18 neighbours. We first build the specification of the classifier using the best K. Then we will build the workflow with the best spec, and we can use the recipe that we created before. "
    ]
   },
   {
@@ -834,7 +834,7 @@
    "id": "728a1848-e4f3-4914-81a7-f07ca21fc2df",
    "metadata": {},
    "source": [
-    "Next, we calculate the accuracy of the classifier by comparing the predictions to the test set. the `metrics()` function calculates the performance of the model's predictions given the true Class and the predicted class labels. `Head(1)` then returns the first row of the data frame that contains the perfmance metric and its estimate. "
+    "Next, we calculate the accuracy of the classifier by comparing the predictions to the test set. he `metrics()` function calculates the performance of the model's predictions given the true Class and the predicted class labels. `Head(1)` then returns the first row of the data frame that contains the perfmance metric and its estimate. "
    ]
   },
   {
