change legend size

--- a/proposal code.ipynb
+++ b/proposal code.ipynb
@@ -371,7 +371,8 @@
     "       y = \"Roundness\",\n",
     "       color = \"Type\") +\n",
     "  ggtitle(\"Figure 2: Area and Roundess of bean types (Barbunya filtered)\")+\n",
-    "  theme(text = element_text(size = 12))\n",
+    "  theme(text = element_text(size = 12))+\n",
+    "  guides(colour = guide_legend(override.aes = list(size=2)))\n",
     "bean_plot2"
    ]
   },
@@ -428,7 +429,8 @@
     "       y = \"Roundness\",\n",
     "       color = \"Type\") +\n",
     "  ggtitle(\"Figure 3: Area and roundness of bean types in training dataset\")+\n",
-    "  theme(text = element_text(size = 12))\n",
+    "  theme(text = element_text(size = 12))+\n",
+    "  guides(colour = guide_legend(override.aes = list(size=2)))\n",
     "area_round_plot"
    ]
   },
@@ -522,7 +524,8 @@
     "       y = \"Roundness\",\n",
     "       color = \"Type\") +\n",
     "  ggtitle(\"Figure 5: Area and roundness in training dataset (upsampled)\")+\n",
-    "  theme(text = element_text(size = 12))\n",
+    "  theme(text = element_text(size = 12))+\n",
+    "  guides(colour = guide_legend(override.aes = list(size=2)))\n",
     "area_round_plot_scaled"
    ]
   },
@@ -925,13 +928,15 @@
     "    ggplot(aes(x = Area, y = roundness, color = .pred_class)) +\n",
     "    geom_point(size = 0.3) +\n",
     "    labs(x = \"Area of Bean\", y = \"Roundness of Bean\", color = \"Type of Bean\") +\n",
-    "    ggtitle(\"Figure 10: Predictions of Bean Type\")\n",
+    "    ggtitle(\"Figure 10: Predictions of Bean Type\")+\n",
+    "  guides(colour = guide_legend(override.aes = list(size=2)))\n",
     "\n",
     "bean_trueclass_plot <- bean_predictions |>\n",
     "    ggplot(aes(x = Area, y = roundness, color = Class)) +\n",
     "    geom_point(size = 0.3) +\n",
     "    labs(x = \"Area of Bean\", y = \"Roundness of Bean\", color = \"Type of Bean\") +\n",
-    "    ggtitle(\"Figure 11: True Class of Beans\")\n",
+    "    ggtitle(\"Figure 11: True Class of Beans\")+\n",
+    "  guides(colour = guide_legend(override.aes = list(size=2)))\n",
     "\n",
     "plot_grid(bean_predictions_plot, bean_trueclass_plot, ncol = 2)"
    ]
